test/e2e/chainsaw/single-grpcroute-filters/assertions/grpcroute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-filters
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - (length(filters)): 3
      backendRefs:
        - name: single-grpcroute-filters-stable-service
        - name: single-grpcroute-filters-canary-service
          (weight): 0
