test/e2e/chainsaw/single-grpcroute-filters/assertions/grpcroute-with-header-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpcroute-filters
  namespace: default
spec:
  (length(rules)): 2
  rules:
    - (length(filters)): 3
      backendRefs:
        - name: single-grpcroute-filters-stable-service
          (weight): 70
        - name: single-grpcroute-filters-canary-service
          (weight): 30
    - name: grpc-filter-preservation-route
      matches:
        - headers:
            - name: X-GRPC-Filter-Test
              type: Exact
              value: preserve-grpc-filters
      (length(filters)): 3
      backendRefs:
        - name: single-grpcroute-filters-canary-service
