test/e2e/chainsaw/single-grpcroute-filters/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: grpcroute-filters-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
