test/e2e/chainsaw/single-grpcroute-filters/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-grpcroute-filters-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: single-grpcroute-filters
---
apiVersion: v1
kind: Service
metadata:
  name: single-grpcroute-filters-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: single-grpcroute-filters
